# template-jupyter

./: README.md  pyproject.toml
app/: lib.py
nootbooks/: basic.ipynb
