[project]
name = "jupyter-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "nbformat>=5.10.4",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 120
unfixable = ["F401"] # Disable fix for unused imports (`F401`).