[project]
name = "jupyter-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0, <3.0.0",
    "pandas>=2.0.0, <3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "ruff>=0.15.1",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]


[tool.ruff]
line-length = 120
unfixable = ["F401"] # Disable fix for unused imports (`F401`).